# robot_control_agent

backend/: .env.development.example  .env.example  .env.production.example  .env.test.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260416_01_initial_schema.py  20260420_01_step07_audit_alert_models.py
backend/src/robot_control_backend/: __init__.py
backend/src/robot_control_backend/api_server/: __init__.py  app.py  contracts.py  deps.py  errors.py  main.py
backend/src/robot_control_backend/audit/: __init__.py  policies.py
backend/src/robot_control_backend/auth/: __init__.py  models.py  rbac.py  service.py
backend/src/robot_control_backend/bootstrap/: __init__.py  logging.py  settings.py
backend/src/robot_control_backend/database/: __init__.py  base.py  models.py  types.py
backend/src/robot_control_backend/domain/: __init__.py  enums.py  models.py  state_machine.py
backend/src/robot_control_backend/executor_worker/: __init__.py
backend/src/robot_control_backend/knowledge_memory/: __init__.py
backend/src/robot_control_backend/robot_adapter/: __init__.py
backend/src/robot_control_backend/task_service/: __init__.py  models.py  service.py
backend/src/robot_control_backend/tools/: __init__.py  config_check.py
backend/src/robot_control_backend/vision/: __init__.py
backend/tests/: conftest.py  test_api_contract.py  test_app.py  test_audit_policies.py  test_auth_api.py  test_database_schema.py  test_domain_models.py  test_settings.py  test_task_state_machine.py  test_tasks_api.py
(+55 files in other folders)
