[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[project]
name = "robot-control-backend"
version = "0.1.0"
description = "Backend foundation for the robotic arm control agent MVP."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.8,<3.0",
    "pydantic>=2.11,<3.0",
    "python-dotenv>=1.1,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.scripts]
robot-control-api = "robot_control_backend.api_server.main:main"
robot-control-config-check = "robot_control_backend.tools.config_check:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/robot_control_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
